--- a/Makefile.max
+++ b/Makefile.max
@@ -5,6 +5,7 @@ all: \
 	iso/songs/tt-fe.xa \
 	iso/songs/cycles.xa \
 	iso/songs/fate-exec.xa \
+	iso/songs/fight-or-flight.xa \
 
 iso/%.xa: iso/%.ogg
 	tools/psxavenc/psxavenc -f 37800 -t xa -b 4 -c 2 -F 1 -C 0 $< $@ 
@@ -29,3 +30,6 @@ iso/songs/cycles.xa: iso/songs/cycles/Inst.xa iso/songs/cycles/Merged.xa iso/son
 
 # Fate  Execution
 iso/songs/fate-exec.xa: iso/songs/fate/Inst.xa iso/songs/execution/Inst.xa
+
+# Fight or flight
+iso/songs/fight-or-flight.xa: iso/songs/fight-or-flight/Inst.xa iso/songs/fight-or-flight/Voices.xa
