--- a/.gitignore
+++ b/.gitignore
@@ -13,6 +13,7 @@ mips/psyq/
 *.map
 *.ps-exe
 *.exe
+*.bak
 tools/funkinisopak/funkinisopak
 tools/funkinarcpak/funkinarcpak
 tools/funkinchartpak/funkinchartpak
