--- a/Makefile.assets
+++ b/Makefile.assets
@@ -1,4 +1,4 @@
 all:
-	@ $(MAKE) -f Makefile.mtim
-	@ $(MAKE) -f Makefile.mcht
-	@ $(MAKE) -f Makefile.max
+	@ $(MAKE) -f Makefile.tim
+	@ $(MAKE) -f Makefile.cht
+	@ $(MAKE) -f Makefile.xa
