--- a/Makefile.tim
+++ b/Makefile.tim
@@ -1,5 +1,6 @@
 all: \
 	iso/characters/bf/main.arc \
+	iso/characters/starvedtails/main.arc \
 	\
 	iso/characters/sonicexe/main.arc \
 	iso/characters/ycn/main.arc \
@@ -13,6 +14,7 @@ all: \
 	iso/stages/gh/back.arc \
 	iso/stages/ycr/back.arc \
 	iso/stages/trichael/back.arc \
+	iso/stages/starved/back.arc \
 	\
 	iso/images/menu/menu.arc \
 	iso/images/menu/loading.tim \
@@ -36,9 +38,6 @@ iso/images/menu/menu.arc: iso/images/menu/back.tim iso/images/menu/ng.tim iso/im
 # BF
 iso/characters/bf/main.arc: iso/characters/bf/bf0.tim iso/characters/bf/bf1.tim iso/characters/bf/bf2.tim iso/characters/bf/bf3.tim iso/characters/bf/bf4.tim iso/characters/bf/bf5.tim iso/characters/bf/bf6.tim iso/characters/bf/dead0.tim iso/characters/bf/dead1.tim iso/characters/bf/dead2.tim iso/characters/bf/retry.tim
 
-# Dad
-iso/characters/dad/main.arc: iso/characters/dad/idle0.tim iso/characters/dad/idle1.tim iso/characters/dad/left.tim iso/characters/dad/down.tim iso/characters/dad/up.tim iso/characters/dad/right.tim
-
 # GF
 iso/characters/gf/main.arc: iso/characters/gf/gf0.tim iso/characters/gf/gf1.tim iso/characters/gf/gf2.tim
 iso/characters/gf/tut.arc: iso/characters/gf/tut0.tim iso/characters/gf/tut1.tim
@@ -51,6 +50,9 @@ iso/stages/gh/back.arc: iso/stages/gh/0.tim iso/stages/gh/1.tim iso/stages/gh/2.
 
 # Trichael
 iso/stages/trichael/back.arc: iso/stages/trichael/0.tim iso/stages/trichael/1.tim
+
+# Starved
+iso/stages/starved/back.arc: iso/stages/starved/0.tim iso/stages/starved/1.tim
 
 # SonicEXE
 iso/characters/sonicexe/main.arc: iso/characters/sonicexe/idle0.tim iso/characters/sonicexe/idle1.tim iso/characters/sonicexe/idle2.tim iso/characters/sonicexe/left0.tim iso/characters/sonicexe/left1.tim iso/characters/sonicexe/down0.tim iso/characters/sonicexe/down1.tim iso/characters/sonicexe/down2.tim iso/characters/sonicexe/down3.tim iso/characters/sonicexe/up0.tim iso/characters/sonicexe/up1.tim iso/characters/sonicexe/up2.tim iso/characters/sonicexe/up3.tim iso/characters/sonicexe/right0.tim iso/characters/sonicexe/right1.tim iso/characters/sonicexe/laugh0.tim iso/characters/sonicexe/laugh1.tim
@@ -69,3 +71,7 @@ iso/characters/sonic/main.arc: iso/characters/sonic/up.tim
 
 # Needlemouse
 iso/characters/nmouse/main.arc: iso/characters/nmouse/idle0.tim iso/characters/nmouse/idle1.tim iso/characters/nmouse/idle2.tim iso/characters/nmouse/idle3.tim iso/characters/nmouse/idle4.tim iso/characters/nmouse/idle5.tim iso/characters/nmouse/idle6.tim iso/characters/nmouse/idle7.tim iso/characters/nmouse/idle8.tim iso/characters/nmouse/idle9.tim iso/characters/nmouse/left0.tim iso/characters/nmouse/left1.tim iso/characters/nmouse/left2.tim iso/characters/nmouse/left3.tim iso/characters/nmouse/left4.tim iso/characters/nmouse/down0.tim iso/characters/nmouse/down1.tim iso/characters/nmouse/down2.tim iso/characters/nmouse/down3.tim iso/characters/nmouse/down4.tim iso/characters/nmouse/up0.tim iso/characters/nmouse/up1.tim iso/characters/nmouse/up2.tim iso/characters/nmouse/up3.tim iso/characters/nmouse/up4.tim iso/characters/nmouse/right0.tim iso/characters/nmouse/right1.tim iso/characters/nmouse/right2.tim iso/characters/nmouse/right3.tim iso/characters/nmouse/right4.tim
+
+# Starved Tails
+iso/characters/starvedtails/main.arc: iso/characters/starvedtails/idle0.tim iso/characters/starvedtails/idle1.tim iso/characters/starvedtails/idle2.tim iso/characters/starvedtails/left0.tim iso/characters/starvedtails/left1.tim iso/characters/starvedtails/down0.tim iso/characters/starvedtails/down1.tim iso/characters/starvedtails/up0.tim iso/characters/starvedtails/up1.tim iso/characters/starvedtails/up2.tim iso/characters/starvedtails/up3.tim iso/characters/starvedtails/right0.tim iso/characters/starvedtails/right1.tim iso/characters/starvedtails/leftm0.tim iso/characters/starvedtails/downm0.tim iso/characters/starvedtails/upm0.tim iso/characters/starvedtails/upm1.tim iso/characters/starvedtails/rightm0.tim
+
