--- a/Makefile.assets
+++ b/Makefile.assets
@@ -4,4 +4,5 @@ all:
 	@ $(MAKE) -f Makefile.tim
 	@ $(MAKE) -f Makefile.cht
 	@ $(MAKE) -f Makefile.xa
+	@ $(MAKE) -f Makefile.vag
 	@ mkpsxiso -y funkin.xml
