--- a/Makefile.xa
+++ b/Makefile.xa
@@ -4,7 +4,6 @@ all: \
 	iso/songs/youcantrun.xa \
 	iso/songs/tripletro.xa \
 	iso/songs/endless.xa \
-	iso/songs/endlessog.xa \
 	iso/songs/cyc-exec.xa \
 	iso/songs/sun-soul.xa \
 	iso/songs/chaos.xa \
@@ -25,17 +24,13 @@ iso/music/menu.xa: iso/music/menuscreen.xa iso/music/gameover.xa iso/music/story
 
 # Too Slow
 iso/songs/tooslow.xa: iso/songs/too-slow/Inst.xa iso/songs/too-slow/Merged.xa iso/songs/too-slow-encore/Inst.xa iso/songs/too-slow-encore/Merged.xa
-
 # You Can't Run
 iso/songs/youcantrun.xa: iso/songs/you-cant-run/Inst.xa iso/songs/you-cant-run/Merged.xa
 # Triple Trouble
 iso/songs/tripletro.xa: iso/songs/triple-trouble/Inst.xa iso/songs/triple-trouble/Merged.xa
 
-# Endless  Endless Encore
-iso/songs/endless.xa: iso/songs/endless/Inst.xa iso/songs/endless/Merged.xa
-
-# Endless OG
-iso/songs/endlessog.xa: iso/songs/endless-og/Inst.xa iso/songs/endless-og/Merged.xa
+# Endless  Endless OG
+iso/songs/endless.xa: iso/songs/endless/Inst.xa iso/songs/endless/Merged.xa iso/songs/endless-og/Inst.xa iso/songs/endless-og/Merged.xa
 
 # Cycles  Execution
 iso/songs/cyc-exec.xa: iso/songs/cycles/Inst.xa iso/songs/cycles/Merged.xa iso/songs/execution/Inst.xa iso/songs/execution/Merged.xa
@@ -46,17 +41,17 @@ iso/songs/sun-soul.xa: iso/songs/sunshine/Inst.xa iso/songs/sunshine/Merged.xa i
 # Chaos
 iso/songs/chaos.xa: iso/songs/chaos/Inst.xa iso/songs/chaos/Merged.xa
 
-# Prey  Fight or flight
+# Prey  Fight or Flight
 iso/songs/pry-fof.xa: iso/songs/prey/Inst.xa iso/songs/prey/Merged.xa iso/songs/fight-or-flight/Inst.xa iso/songs/fight-or-flight/Merged.xa
 
 # Round-A-Bout
 iso/songs/rab.xa: iso/songs/round-a-bout/Inst.xa iso/songs/round-a-bout/Merged.xa 
 
 # Milk
-iso/songs/milk.xa: iso/songs/milk-1/Inst.xa iso/songs/milk-1/Merged.xa iso/songs/milk-2/Inst.xa iso/songs/milk-2/Merged.xa
+iso/songs/milk.xa: iso/songs/milk/Inst.xa iso/songs/milk/Merged.xa
 
 # Too Fest
-iso/songs/too-fest.xa: iso/songs/too-fest-1/Inst.xa iso/songs/too-fest-1/Merged.xa iso/songs/too-fest-2/Inst.xa iso/songs/too-fest-2/Merged.xa
+iso/songs/too-fest.xa: iso/songs/too-fest/Inst.xa iso/songs/too-fest/Merged.xa
 
 # Personel
 iso/songs/personel.xa: iso/songs/personel/Inst.xa iso/songs/personel/Merged.xa
