--- a/Makefile.tim
+++ b/Makefile.tim
@@ -9,6 +9,7 @@ all: \
 	iso/images/font/arial.tim \
 	iso/images/events/static.tim \
 	iso/images/hud0.tim \
+	iso/images/hudmajin.tim \
 	iso/images/hud1.tim \
 	iso/images/startscreens/strscr.arc \
 	iso/images/note.tim \
